fixed overflow issues caused by AOS fade in left/right anims on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -16,6 +16,7 @@ h1.aboutMeHeader {
 .about-me {
   background: linear-gradient(180deg, #01254c 0%, var(--color-primary) 100%);
   padding: 0 10rem;
+  overflow-x: hidden;
 }
 
 .about-me p {
